--- a/src/app/features/user-management/forgot-password/forgot-password.component.html
+++ b/src/app/features/user-management/forgot-password/forgot-password.component.html
@@ -33,7 +33,6 @@
           autocomplete="off"
           matInput
           formControlName="emailFormControl"
-          (keyup.enter)="login()"
         />
         <mat-error *ngIf="hasError('emailFormControl','email')">
           {{"user.form_validations.please_enter_a_valid_email_address" | translate}}
@@ -51,14 +50,11 @@
         class="signin-btn"
         [disabled]="forgotpasswordform.invalid"
         (click)="send()"
+        (keyup.enter)="send()"
       >
         SEND
       </button>
     </div>
   </mat-card>
 </div>
-<app-spinner
-  *ngIf="show"
-  style="position: absolute;top: 66%;left: 48%;"
-  [loading]="dataLoading"
-></app-spinner>
+<app-spinner [loading]="dataLoading"></app-spinner>
