--- a/src/app/features/user-management/profile/buy-list/buy-list.component.html
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.html
@@ -39,7 +39,7 @@
       </div>
     </app-big-input>
   </div>
-  <ng-container *ngIf="list && show">
+  <ng-container *ngIf="list">
     <div class="buy-card-container">
       <div class="filter-btn">
         <button
