--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -139,7 +139,13 @@
 <mat-toolbar
   [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async)}"
 >
-  <button [disabled]="editform.invalid" class="pink-btn" id="btnSave" mat-flat-button (click)="save()">
+  <button
+    [disabled]="editform.invalid"
+    class="pink-btn"
+    id="btnSave"
+    mat-flat-button
+    (click)="save()"
+  >
     {{"user.form.save" | translate}}
   </button>
   &nbsp;&nbsp;
