--- a/src/app/shared/list-products/list-products.component.html
+++ b/src/app/shared/list-products/list-products.component.html
@@ -11,7 +11,7 @@
                   matTooltip="{{'tooltip.add_to_wishlist' | translate}}"
                   [matTooltipShowDelay]="300"
                   matTooltipPosition="above"
-                  (click)="addToWishlit(item)"
+                  (click)="addToWishlist(item)"
                 >
                   <mat-icon>favorite_border </mat-icon>
                 </button>
