--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -316,6 +316,8 @@
           font-weight: lighter;
           margin: 8px 0;
           height: 124px;
+          display: flex;
+          justify-content: center;
           .large-image {
             width: 100px;
             height: 100px;
