--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -173,4 +173,4 @@
     </mat-card-content>
   </mat-card>
 </div>
-<app-footer [position]="sticky"></app-footer>
+<app-footer [position]="'sticky'"></app-footer>
