--- a/src/app/features/user-management/profile/buy-list/buy-list.component.html
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.html
@@ -106,4 +106,4 @@
     </div>
   </ng-container>
 </div>
-<app-footer [position]="sticky"></app-footer>
+<app-footer [position]="'sticky'"></app-footer>
