--- a/src/app/features/admin-management/product-components/update-product/update-product.component.html
+++ b/src/app/features/admin-management/product-components/update-product/update-product.component.html
@@ -18,4 +18,4 @@
     </app-big-input>
   </div>
 </div>
-<app-footer [position]="sticky"></app-footer>
+<app-footer [position]="'sticky'"></app-footer>
