--- a/src/app/features/admin-management/user-components/block-user/block-user.component.html
+++ b/src/app/features/admin-management/user-components/block-user/block-user.component.html
@@ -18,4 +18,4 @@
     </app-big-input>
   </div>
 </div>
-<app-footer [position]="sticky"></app-footer>
+<app-footer [position]="'sticky'"></app-footer>
