--- a/src/app/features/admin-management/user-components/view-users/view-users.component.html
+++ b/src/app/features/admin-management/user-components/view-users/view-users.component.html
@@ -104,4 +104,4 @@
     </mat-card-content>
   </mat-card>
 </div>
-<app-footer [position]="sticky"></app-footer>
+<app-footer [position]="'sticky'"></app-footer>
