--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -54,7 +54,7 @@
         <button
           mat-menu-item
           [ngClass]="{'dark-menuu-item':( property.nightmode | async)}"
-          (click)="route('/creators/^')"
+          (click)="route('/creators')"
         >
           <mat-icon>supervisor_account</mat-icon>About The Creators
         </button>
