style: 💄 styles fixed

--- a/src/app/shared/quickview/quickview.component.html
+++ b/src/app/shared/quickview/quickview.component.html
@@ -25,7 +25,7 @@
           </li>
         </ul>
       </div>
-      <div fxFlex="50%">
+      <div fxFlex="50%" class="side-description">
         <h3 class="product-title">{{ data.name }}</h3>
         <p class="product-description">
           {{data.description}}
