--- a/src/app/core/auth-management/login/login.component.html
+++ b/src/app/core/auth-management/login/login.component.html
@@ -1,3 +1,4 @@
+<app-loading-bar></app-loading-bar>
 <div [ngClass]="{'input-template':true, 'dark-input-template' :( property.nightmode | async)}">
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
