--- a/src/app/features/user-management/wish-list/wish-list.component.html
+++ b/src/app/features/user-management/wish-list/wish-list.component.html
@@ -45,7 +45,7 @@
           matTooltip="{{'tooltip.add_to_cart' | translate}}"
           matTooltipPosition="left"
           [matTooltipShowDelay]="500"
-          (click)="addToWishlist(element)"
+          (click)="addToCart(element)"
         >
           <mat-icon>add_shopping_cart</mat-icon>
         </button>
