--- a/src/app/features/cart-management/checkout/checkout.component.html
+++ b/src/app/features/cart-management/checkout/checkout.component.html
@@ -5,19 +5,19 @@
   [linear]="isLinear"
   #stepper
 >
-  <mat-step>
+  <mat-step [completed]="step1" [editable]="false">
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_billing_address" | translate}}
     </ng-template>
     <app-billing [paddingtop]="paddingtop" (step1status)="setstep1status($event)"></app-billing>
   </mat-step>
-  <mat-step>
+  <mat-step [completed]="step2" [editable]="false">
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_address" | translate}}
     </ng-template>
     <app-payment [paddingtop]="paddingtop" (step2status)="setstep2status($event)"></app-payment>
   </mat-step>
-  <mat-step>
+  <mat-step [completed]="false" [editable]="false">
     <ng-template matStepLabel>
       {{"user.form_heading.sucess" | translate}}
     </ng-template>
