--- a/src/app/features/product-management/detailview/detailview.component.html
+++ b/src/app/features/product-management/detailview/detailview.component.html
@@ -11,7 +11,7 @@
         <app-description-viewer [product]="productdata"></app-description-viewer>
       </mat-tab>
       <mat-tab label="{{'user.form_heading.reviews' | translate}}">
-        <app-reviews-viewer></app-reviews-viewer>
+        <app-reviews-viewer [product_id]="productid"></app-reviews-viewer>
       </mat-tab>
     </mat-tab-group>
   </div>
