--- a/src/app/features/user-management/view-orders/view-orders.component.html
+++ b/src/app/features/user-management/view-orders/view-orders.component.html
@@ -1,19 +1,20 @@
 <app-navbar [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.your_orders'"></app-jumbotron>
+<app-spinner [loading]="dataLoading" class="centre-spinner"></app-spinner>
 <div [ngClass]="{'order-container':true,'dark-order-container': ( property.nightmode | async)}">
   <mat-accordion>
-    <ng-container *ngFor="let order of orderitems">
+    <ng-container *ngFor="let order of orderitems index as i">
       <mat-expansion-panel>
         {{reset()}}
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{order.name}}
+            ORDER {{i + 1 }}
           </mat-panel-title>
           <mat-panel-description>
-            {{order.date}}
+            {{order[0].date}}
           </mat-panel-description>
         </mat-expansion-panel-header>
-        <table mat-table [dataSource]="order.products">
+        <table mat-table [dataSource]="order">
           <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef style="width: 15%;">
               {{"user.product.no" | translate}}
@@ -44,12 +45,12 @@
 
           <ng-container matColumnDef="quantity">
             <th mat-header-cell *matHeaderCellDef>{{"user.product.quantity" | translate}}</th>
-            <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
+            <td mat-cell *matCellDef="let element">{{element.qty}}</td>
           </ng-container>
 
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef style="width: 100px;">
-              <button class="cancel-btn" mat-raised-button>
+              <button class="cancel-btn" mat-raised-button (click)="cancelOrder(order[i] ,i)">
                 {{"user.product.cancel_this_order" | translate}}
                 <mat-icon>cancel</mat-icon>
               </button>
