--- a/src/app/features/user-management/forgot-password/forgot-password.component.html
+++ b/src/app/features/user-management/forgot-password/forgot-password.component.html
@@ -1,4 +1,5 @@
 <div [ngClass]="{'input-template':true, 'dark-input-template' :( property.nightmode | async)}">
+  <app-spinner [loading]="dataLoading" class="centre-spinner"></app-spinner>
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Forgot Password</mat-card-title>
@@ -54,6 +55,9 @@
       >
         SEND
       </button>
+    </div>
+    <div class="input-text" style="margin-top: 0px;">
+      <a [routerLink]="['/login']"> Go To Login Page </a>
     </div>
   </mat-card>
 </div>
