--- a/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
+++ b/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
@@ -5,29 +5,29 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            <img class="user-image" src="{{ user.image }}" />
+            <img class="user-image" src="{{ user.profilepic }}" />
           </mat-panel-title>
           <mat-panel-description>
             <p>{{user.name}}</p>
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-accordion>
-          <ng-container *ngFor="let order of user.order">
+          <ng-container *ngFor="let order of user.orders index as i">
             <mat-expansion-panel>
               {{reset()}}
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  {{order.name}}
+                  ORDER {{i+1}}
                 </mat-panel-title>
                 <mat-panel-description>
-                  {{order.date}}
+                  {{order[0].date}}
                 </mat-panel-description>
               </mat-expansion-panel-header>
               <div fxLayout="row" fxLayoutAlign="start">
-                <div fxFlex="80%">
-                  <table mat-table [dataSource]="order.products">
+                <div fxFlex="100%">
+                  <table mat-table [dataSource]="order">
                     <ng-container matColumnDef="number">
-                      <th mat-header-cell *matHeaderCellDef style="width: 20%;">
+                      <th mat-header-cell *matHeaderCellDef style="width: 15%;">
                         {{"admin.table.no" | translate}}
                       </th>
                       <td mat-cell *matCellDef="let element">
@@ -58,17 +58,17 @@
                     </ng-container>
 
                     <ng-container matColumnDef="quantity">
-                      <th mat-header-cell *matHeaderCellDef style="width: 20%;">
+                      <th mat-header-cell *matHeaderCellDef>
                         {{"admin.table.quantity" | translate}}
                       </th>
-                      <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
+                      <td mat-cell *matCellDef="let element">{{element.qty}}</td>
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                   </table>
                 </div>
-                <div fxFlex="20%">
+                <!-- <div fxFlex="20%">
                   <mat-card class="order-card">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <button
@@ -89,7 +89,7 @@
                       <mat-icon>cancel</mat-icon>
                     </button>
                   </mat-card>
-                </div>
+                </div> -->
               </div>
             </mat-expansion-panel>
           </ng-container>
