--- a/src/app/shared/authors-carousel/authors-carousel.component.html
+++ b/src/app/shared/authors-carousel/authors-carousel.component.html
@@ -16,7 +16,10 @@
       <div class="carousel-inner">
         <div class="item carousel-item active">
           <div class="img-box">
-            <img src="https://scontent.fstv5-1.fna.fbcdn.net/v/t1.0-9/p960x960/83093205_1221984354658192_4218277249020854272_o.jpg?_nc_cat=101&_nc_sid=85a577&_nc_ohc=qg8cNgtpBbgAX_lQRAH&_nc_ht=scontent.fstv5-1.fna&_nc_tp=6&oh=8e0232de11c2347a3556627154979dd0&oe=5EC75E57" alt="" />
+            <img
+              src="https://scontent.fstv5-1.fna.fbcdn.net/v/t1.0-9/p960x960/83093205_1221984354658192_4218277249020854272_o.jpg?_nc_cat=101&_nc_sid=85a577&_nc_ohc=qg8cNgtpBbgAX_lQRAH&_nc_ht=scontent.fstv5-1.fna&_nc_tp=6&oh=8e0232de11c2347a3556627154979dd0&oe=5EC75E57"
+              alt=""
+            />
           </div>
           <p class="testimonial">
             {{'shared.authors.kaushal_description' | translate}}
