--- a/src/app/shared/image-viewer/image-viewer.component.html
+++ b/src/app/shared/image-viewer/image-viewer.component.html
@@ -7,14 +7,15 @@
       <div class="profile-image">
         <ng-container *ngFor="let image of product index as i">
           <ng-container *ngIf="getnumber(i)">
-            <ngx-image-zoom
+            <img src="{{image.imageurl}}">
+            <!-- <ngx-image-zoom
               [thumbImage]="image.imageurl"
               [magnification]="1.5"
               [enableScrollZoom]="true"
               [enableLens]="true"
               [lensWidth]="150"
               [lensHeight]="150"
-            ></ngx-image-zoom>
+            ></ngx-image-zoom> -->
           </ng-container>
         </ng-container>
       </div>
